--- a/registry/brook/ui/navigation-menu/navigation-menu.module.css
+++ b/registry/brook/ui/navigation-menu/navigation-menu.module.css
@@ -20,6 +20,7 @@
   width: var(--positioner-width);
   height: var(--positioner-height);
   max-width: var(--available-width);
+  z-index: 150;
 }
 
 .positioner[data-instant] {
